<resources>
    <string name="app_name">BaWeiShopping</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="user_login">用户登录</string>
    <string name="user_register">用户注册</string>
    <string name="please_name">请输入用户名</string>
    <string name="please_pass">请输入密码</string>
    <string name="please_pass_again">请再次输入密码</string>
    <string name="please_email">请输入邮箱地址</string>
    <string name="register_account">注册账号</string>
    <string name="forget_pass">找回密码</string>
</resources>
